--- a/src/ParatextSupport/ParatextSupport4.csproj
+++ b/src/ParatextSupport/ParatextSupport4.csproj
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -31,7 +32,7 @@
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile/>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -211,20 +212,32 @@
     <CodeAnalysisFailOnMissingRules>false</CodeAnalysisFailOnMissingRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CssDialog, Version=1.13.4.4657, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\output\Debug\CssDialog.dll</HintPath>
+    </Reference>
     <Reference Include="L10NSharp, Version=2.0.17.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\L10NSharp.dll</HintPath>
     </Reference>
-    <Reference Include="System"/>
-    <Reference Include="System.Windows.Forms"/>
-    <Reference Include="System.Xml"/>
+    <Reference Include="PsExport, Version=1.13.4.4657, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\output\Debug\PsExport.dll</HintPath>
+    </Reference>
+    <Reference Include="PsTool, Version=1.13.4.4657, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\output\Debug\PsTool.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ParatextPathwayLink.cs"/>
-    <Compile Include="Properties\AssemblyInfo.cs"/>
-    <Compile Include="SfmToUsx.cs"/>
-    <Compile Include="StyToCss.cs"/>
-    <Compile Include="UsxToSFM.cs"/>
+    <Compile Include="ParatextPathwayLink.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SfmToUsx.cs" />
+    <Compile Include="StyToCss.cs" />
+    <Compile Include="UsxToSFM.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="EncloseParasInSections.xsl">
@@ -232,7 +245,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="XML_without_line_breaks.xsl"/>
+    <EmbeddedResource Include="XML_without_line_breaks.xsl" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="UsfxToXhtml.xsl">
@@ -240,25 +253,11 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CssDialog\CssDialog.csproj">
-      <Project>{1A58ECC5-75FE-4FE2-B133-8605B382B7C0}</Project>
-      <Name>CssDialog</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PsExport\PsExport.csproj">
-      <Project>{DCD48287-7F36-4DBB-94CF-4FF617BF1F78}</Project>
-      <Name>PsExport</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PsTool\PsTool.csproj">
-      <Project>{448F846F-CE23-462C-BF7E-827875A36F82}</Project>
-      <Name>PsTool</Name>
-    </ProjectReference>
+    <None Include="App.config" />
+    <None Include="PostBuild.bat" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config"/>
-    <None Include="PostBuild.bat"/>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="SeparateIntoBooks.xsl"/>
+    <EmbeddedResource Include="SeparateIntoBooks.xsl" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -278,9 +277,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SectionHeadMismatch.xsl"/>
+    <EmbeddedResource Include="SectionHeadMismatch.xsl" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets"/>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
