--- a/src/PsTool/packages.config
+++ b/src/PsTool/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
+  <package id="Analytics" version="2.0.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
 </packages>
