1st update to Linux build

--- a/debian/sil-ConfigurationTool.desktop
+++ b/debian/sil-ConfigurationTool.desktop
@@ -6,7 +6,7 @@ Icon=pathwayConfigurationTool22
 Name=Pathway ConfigurationTool
 Comment=Sets default values and styles for Pathway export
 Exec=/usr/bin/ConfigurationTool
-Path=/usr/lib/pathway/
+Path=/usr/lib/pathway/Export
 Terminal=false
 Categories=Education
 Name[en_US]=Pathway ConfigurationTool
