--- a/src/PsTool/PsTool4.csproj
+++ b/src/PsTool/PsTool4.csproj
@@ -253,6 +253,7 @@
     <Compile Include="CommonXml.cs" />
     <Compile Include="CreatingHyphenationSettings.cs" />
     <Compile Include="FileStreamXmlResolver.cs" />
+    <Compile Include="FlexScan.cs" />
     <Compile Include="ImageMods.cs" />
     <Compile Include="Json.cs" />
     <Compile Include="FontInternals.cs">
@@ -260,6 +261,8 @@
     <Compile Include="HashUtilities.cs" />
     <Compile Include="MergeCss.cs" />
     <Compile Include="MessageBoxExtender.cs" />
+    <Compile Include="NullXmlResolver.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Param.cs" />
     <Compile Include="PathPart.cs" />
     <Compile Include="PathwayPath.cs" />
@@ -325,6 +328,8 @@
     <Compile Include="SubProcess.cs" />
     <Compile Include="Substitution.cs" />
     <Compile Include="XHTMLProcess.cs" />
+    <Compile Include="XmlCopy.cs" />
+    <Compile Include="XmlParser.cs" />
     <Compile Include="ZipFolder.cs" />
     <Compile Include="ZipUtil.cs" />
   </ItemGroup>
