Update pathway-xelatex packaging

--- a/src/XeLaTexConvert/Makefile
+++ b/src/XeLaTexConvert/Makefile
@@ -1,31 +1,50 @@
 ifndef prefix
 prefix=/usr
 endif
-ifndef binsrc
-binsrc=~/git/pathway/src/XeLaTexConvert
-endif
-ifndef bindst
-bindst=$(binsrc)/bin
-endif
 ifndef bininst
 bininst=/lib/pwtex
 endif
-ifndef target
-target=ReBuild
+ifndef binsrc
+binsrc=$(PWD)
+endif
+ifndef bindst
+bindst=$(binsrc)/output
 endif
 ifndef BUILD_NUMBER
-BUILD_NUMBER=1.5.0.2445
+BUILD_NUMBER=1.15.4.5366
 endif
+ifndef Platform
+Platform=Any CPU
+endif
+ifndef MONO_PREFIX
+MONO_PREFIX=/opt/mono4-sil
+endif
+ifndef GDK_SHARP
+GDK_SHARP=$(MONO_PREFIX)/lib/mono/gtk-sharp-3.0
+endif
+ifndef LD_LIBRARY_PATH
+LD_LIBRARY_PATH=$(MONO_PREFIX)/lib
+endif
+ifndef PKG_CONFIG_PATH
+PKG_CONFIG_PATH=$(MONO_PREFIX)/lib/pkgconfig
+endif
+ifndef MONO_GAC_PREFIX
+MONO_GAC_PREFIX=$(MONO_PREFIX)
+endif
+ifndef MONO_MWF_SCALING
+MONO_MWF_SCALING=disable
+endif
+PATH := $(MONO_PREFIX)/bin:$(PATH)
 
 build:
 	cd ../../DistFiles;xbuild /verbosity:detailed /target:XeLaTexBeforeBuild /property:Configuration=PathwayXeLaTeX\;BUILD_NUMBER=$(BUILD_NUMBER)\;Platform='$(Platform)'\;OS=Linux\;OutputPath=. /flp:LogFile=log.txt
 	rm -r -f $(bindst)
-	mkdir $(bindst)
+	mkdir -p $(bindst)
 	cp -r $(binsrc)/../../output/pwtex/* $(bindst)
 
 install:
 	mkdir -p $(DESTDIR)$(prefix)$(bininst)
-	cp -r bin/. $(DESTDIR)$(prefix)$(bininst)
+	cp -r $(bindst)/* $(DESTDIR)$(prefix)$(bininst)
 	mkdir -p $(DESTDIR)$(prefix)/share/doc/pathway-xelatex
 	chmod 777 $(DESTDIR)$(prefix)/share/doc/pathway-xelatex
 	mkdir -p $(DESTDIR)$(prefix)/share/pwtex
