Updated splitter initial work

--- a/src/PsTool/PsTool4.csproj
+++ b/src/PsTool/PsTool4.csproj
@@ -292,6 +292,7 @@
     <Compile Include="RegistryHelperLite.cs" />
     <Compile Include="SettingsHelper.cs" />
     <Compile Include="ShowHelp.cs" />
+    <Compile Include="SplitXml.cs" />
     <Compile Include="StyleCategories.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -329,6 +330,7 @@
     <Compile Include="Substitution.cs" />
     <Compile Include="XHTMLProcess.cs" />
     <Compile Include="XmlCopy.cs" />
+    <Compile Include="XmlOneToMany.cs" />
     <Compile Include="XmlParser.cs" />
     <Compile Include="ZipFolder.cs" />
     <Compile Include="ZipUtil.cs" />
