--- a/src/PsTool/PsTool.csproj
+++ b/src/PsTool/PsTool.csproj
@@ -298,6 +298,7 @@
     <Compile Include="RegistryHelperLite.cs" />
     <Compile Include="SettingsHelper.cs" />
     <Compile Include="ShowHelp.cs" />
+    <Compile Include="SplitXml.cs" />
     <Compile Include="StyleCategories.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -335,6 +336,7 @@
     <Compile Include="Substitution.cs" />
     <Compile Include="XHTMLProcess.cs" />
     <Compile Include="XmlCopy.cs" />
+    <Compile Include="XmlOneToMany.cs" />
     <Compile Include="XmlParser.cs" />
     <Compile Include="ZipFolder.cs" />
     <Compile Include="ZipUtil.cs" />
