Create Browseable HTML5

--- a/src/epubConvert/epubConvert.csproj
+++ b/src/epubConvert/epubConvert.csproj
@@ -343,6 +343,9 @@
   <ItemGroup>
     <EmbeddedResource Include="NcxToXhtml.xsl" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="toc2html5.xsl" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
